Fix mis-aligned header nav

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -36,6 +36,12 @@ $govuk-images-path: "/govuk-frontend/assets/images/";
   max-width: 30em;
 }
 
+// digital land site only uses part of govuk-header
+.govuk-header__content {
+  width: 100%;
+  padding-left: 0;
+}
+
 // =====================
 // Project scss
 // =====================
